--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -176,3 +176,11 @@ div.dataTables_wrapper div.dataTables_filter{
     width:100%;
     height: 100%;
 }
+.footer {
+    /*position: absolute;*/
+    /*bottom: 0*/
+}
+
+.startag .filter-container input{
+        width: 150px;
+}
