changes made on sign in page, add image on user verification

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -226,3 +226,11 @@ div.dataTables_wrapper div.dataTables_filter {
   width: 160px;
   margin: 5px 10px;
 }
+.footer {
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+    left: 0;
+    background-color: #fff;
+    text-align: center;
+}
