--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -234,3 +234,6 @@ div.dataTables_wrapper div.dataTables_filter {
     background-color: #fff;
     text-align: center;
 }
+.image-post{
+width: auto
+}
