--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -55,7 +55,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 10px 20px !important;
+  padding: 10px 30px !important;
 }
 
 .login-btn p {
@@ -227,13 +227,13 @@ div.dataTables_wrapper div.dataTables_filter {
   margin: 5px 10px;
 }
 .footer {
-    position: fixed;
-    bottom: 0px;
-    width: 100%;
-    left: 0;
-    background-color: #fff;
-    text-align: center;
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+  left: 0;
+  background-color: #fff;
+  text-align: center;
 }
-.image-post{
-width: auto
+.image-post {
+  width: auto;
 }
